# django-eventlog

./: .coveragerc  .env  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Pipfile  README.md  README.rst  mkdocs.yml  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  push.yml
docs/: Makefile  changelog.md  conf.py  index.rst  installation.md  installation.rst  settings.md  settings.rst  testing.md  testing.rst  usage.rst
eventlog/: __init__.py  admin.py  apps.py  datastructures.py  events.py  mixins.py  models.py
eventlog/migrations/: 0001_initial.py  0002_alter_event_group_alter_event_id_alter_event_message.py  0002_alter_event_group_alter_event_message_and_more.py  0003_event_data.py  0003_event_eventlog_ev_group_88fa5e_idx_and_more.py  0004_alter_event_group.py
eventlog/templates/admin/eventlog/event/: change_form.html  change_list.html
eventlog/tests/: test_eventlog.py  test_migrations.py
eventlog/tests/testapp/: settings.py  urls.py
