[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
exclude = "migrations"

[tool.ruff]
target-version = "py38"
exclude = ["migrations"]
lint.select = ["ALL"]
lint.ignore = [
  "ANN101",   # Missing type annotation for `self`
  "ANN401",   # typing.Any is disallowed as function arg type
  "ARG001",   # Unused function argument
  "ARG002",   # Unused method argument
  "D",        # Missing or badly formatted docstrings
  "E501",     # Line too long (>88)
  "ERA001",   # Found commented-out code
  "FBT",      # Flake Boolean Trap (don't use arg=True in functions)
  "RUF012",   # Mutable class attributes should be annotated with `typing.ClassVar`
  "SLF001",   # Private member accessed: `_meta`
]

[tool.ruff.lint.extend-per-file-ignores]
"test_*.py"  = [
  "S101",     # Use of `assert` detected
  "PLR2004",  # Magic value used in comparison, consider replacing 200 with a constant variable
]

[tool.pytest.ini_options]
python_files = [
  "tests.py",
  "test_*.py",
  "*_tests.py",
]
addopts = """
    --ds=eventlog.tests.testapp.settings
    --reuse-db
"""
filterwarnings = ["ignore::RuntimeWarning"]
