[metadata]
name = django-eventlog
version = 1.1
description =
    django-eventlog stores event messages in a Django model.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-eventlog
keywords = django, pastebin
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = '>=3.4'
install_requires =
    django>=1.8
    tox
    coverage

[isort]
default_section = THIRDPARTY
known_first_party = eventlog
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip = migrations

[coverage:run]
source = eventlog
branch = True
omit =
    eventlog/migrations/*
    eventlog/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/eventlog
