[metadata]
name = django-eventlog
version = 1.3
description =
    django-eventlog stores event messages in a Django model.
long_description = file: README.rst, CHANGELOG.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-eventlog
keywords = django, logging, logger, events
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires =
    >=3.8
install_requires =
    django>=3.2
